--- a/style.css
+++ b/style.css
@@ -502,3 +502,33 @@ button:hover {
         font-size: 12px;
     }
 }
+
+
+/*vedio responsive*/
+
+.sec-vidio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.sec-vidio img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px; /* Optional: add border radius if needed */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: add shadow for better visual */
+}
+
+/* Media queries for further adjustments if needed */
+@media (max-width: 768px) {
+    .sec-vidio {
+        margin-top: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .sec-vidio {
+        margin-top: 15px;
+    }
+}
